--- a/src/main/resources/messages/messages_ru_RU.properties
+++ b/src/main/resources/messages/messages_ru_RU.properties
@@ -6,3 +6,4 @@ filter.value=Фильтры
 app.filtering.articles.published=Сначала не опубликованные,Сначала опубликованные,Сортировка по публикации
 app.filtering.articles.label=Сначала по алфавиту,Сначала не по алфавиту,Сортировка по названию
 select.empty.value=Без сортировки
+date.published=Дата публикации
