add translate via messages

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -1,4 +1,5 @@
 error.message.not.found=Error 404 ops... Not found page
+error.message.not.found.articles=Not found articles...
 articles.search.by.article=Search by article
 articles.create.article=Create article
 articles.upload.article=Upload article
@@ -7,3 +8,30 @@ app.filtering.articles.published=First not published,First published,Sorting by 
 app.filtering.articles.label=By ascending,By descending,Sorting by name
 select.empty.value=Without sorting
 date.published=Date of publication
+label.comment=Comment
+button.more.detailed=More detailed
+button.published.with.capital.letter=To publish
+button.published=to publish
+button.delete=Delete
+button.editor=Edit
+delete.question=Are you sure you want to delete it?
+name.main.page=Home
+name.articles.page=Articles
+name.courses.page=Courses
+name.account.page=Account
+name.my.articles.page=Мy articles
+name.action.exit=Exit
+field.user.name=Username
+field.user.password=Password
+login.value=Login
+registration.value=Registration
+check.value.by.login=Check the entered username and password
+back.value=Back
+field.registration.last.name=Last name
+field.registration.first.name=First name
+field.registration.login=Login
+field.registration.password=Password
+field.registration.password.retry=Repeat password
+article.load.name=Name article
+article.load.content=Content
+text.save=Save
